solved language flickering and contact button width

--- a/src/app.css
+++ b/src/app.css
@@ -175,6 +175,8 @@ body {
 
 .list-items {
   border-top: solid 1px #eee;
+  width: calc( 100% + 40px);
+  margin-left: -20px;
 }
 
 .list-item {
@@ -520,8 +522,8 @@ button.language {
 
 .selected button.language {
   opacity: 1;
-  line-height: 79px;
-  height: 79px;
+  line-height: 80px;
+  height: 80px;
 }
 
 button {
@@ -1203,7 +1205,6 @@ footer img {
   display: block;
   height: 20px;
   border-radius: 4px;
-  outline: none;
   border: solid 1px #eee !important;
   padding: 10px;
   font-size: 16px;
@@ -1232,7 +1233,6 @@ footer img {
     background: #32325d;
     color: #fff;
     border: none;
-    outline: none;
     border-radius: 4px;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
     transition: all 150ms ease;
